@@ -7,7 +7,7 @@ use strict;
 use Test;
 use File::Spec;
 use Data::Dumper;
-BEGIN { plan tests => 11 };
+BEGIN { plan tests => 6 };
 
 # load modules
 use Astro::Catalog;
@@ -19,7 +19,7 @@ use Astro::Catalog::Star;
 ok(1);
 
 # setup environemt
-my dir = File::Spec->tmpdir();
+my $dir = File::Spec->tmpdir();
 
 my @star;
 
@@ -102,41 +102,6 @@ for my $i (0 .. $#buffer) {
    ok( $file[$i], $buffer[$i] );
 }
 
-# Create another catalog object from the Cluster file
-# ---------------------------------------------------
-
-my $cluster = new Astro::Catalog( RA      => '01 10 12.9',
-                                  Dec     => '+60 04 35.9',
-                                  Radius  => '1',
-                                  File => $file_name,
-				  Format => 'Cluster',
-				);
-
-# Write Catalog to Cluster File
-# -----------------------------
-
-$file_name = File::Spec->catfile( $dir, "other.cat" );
-
-# write it to /tmp/other.cat under UNIX
-$cluster->write_catalog( Format => 'Cluster', File => $file_name );
-
-# Compare output file and DATA block
-# ----------------------------------
-
-# clean out @file
-@file = [];
-
-# temporary file
-open( FILE, $file_name );
-@file = <FILE>;
-chomp @file;
-close(FILE);
-
-for my $i (0 .. $#buffer) {
-   ok( $file[$i], $buffer[$i] );
-}
-
-
 # L A S T   O R D E R S   A T   T H E   B A R --------------------------------
 
 # Dump catalog object to screen
@@ -161,6 +126,6 @@ exit;
 __DATA__
 5 colours were created
 B R V B-R B-V
-A sub-set of USNO-A2: Field centre at RA 01 10 12.90, Dec +60 04 35.90, Search Radius 1 arcminutes 
-00080  U1500_01194794  09 55 39.00  +60 07 23.60  0.000 0.000 16.4  0.4  0  16.1  0.1  0  16.3  0.3  0  0.3  0.05  0  0.1  0.02  0  
-00081  U1500_01194795  10 44 57.00  +12 34 53.50  0.000 0.000 9.3  0.2  0  9.5  0.6  0  9.1  0.1  0  0.2  0.07  0  -0.2  0.05  0  
+Origin: <UNKNOWN>   Field Centre: RA 01 10 12.90, Dec +60 04 35.90   Catalogue Radius: 1 arcmin
+00080  U1500_01194794  09 55 39.00  +60 07 23.60  0.000  0.000  16.4  0.4  0  16.1  0.1  0  16.3  0.3  0  0.3  0.05  0  0.1  0.02  0  
+00081  U1500_01194795  10 44 57.00  +12 34 53.50  0.000  0.000  9.3  0.2  0  9.5  0.6  0  9.1  0.1  0  0.2  0.07  0  -0.2  0.05  0  
